--- a/code/brndn/HTML_CSS_Labs/Lab1_Bio/bio.html
+++ b/code/brndn/HTML_CSS_Labs/Lab1_Bio/bio.html
@@ -4,28 +4,34 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="bio.css"/>
     <title>Alan Watts Bio</title>
   </head>
   <body>
-    <h1><a href="https://en.wikipedia.org/wiki/Alan_Watts">Alan Watts</a></h1>
-    <h2>Philosopher</h2>
-    <h3>6 January 1915 – 16 November 1973</h3>
-    <h4>British philosopher, writer, and speaker known for interpreting and popularising Buddhism, Taoism, and Hinduism for a Western audience.</h4>
+    <div id="header">
+      <h1><a href="https://en.wikipedia.org/wiki/Alan_Watts">Alan Watts</a></h1>
+      <h3>Philosopher</h3>
+      <h3>6 January 1915 – 16 November 1973</h3>
+      <h3>British philosopher, writer, and speaker known for interpreting and popularising Buddhism, Taoism, and Hinduism for a Western audience.</h3>
+    </div>
     <p>“Perhaps the foremost interpreter of Eastern disciplines for the contemporary West, Alan Watts had the rare gift of ‘writing beautifully the un-writable’.</p>
     <p>Watts begins with scholarship and intellect and proceeds with art and eloquence to the frontiers of the spirit. A fascinating entry into the deepest ways of knowing.”</p>
     <p> — LA Times</p>
-    <img src="https://assets.rebelmouse.io/eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpbWFnZSI6Imh0dHBzOi8vYXNzZXRzLnJibC5tcy8xOTA5ODY3MC9vcmlnaW4uanBnIiwiZXhwaXJlc19hdCI6MTYzNzAxODcwOH0.vhw9Ji96VyGXUQZVsquKFeeozT6Ytt0DQw5lVGuzCHw/img.jpg?width=1200&coordinates=0%2C86%2C0%2C87&height=600" alt="Alan Watts"/>
-    <p>A History of Residence:</p>
+    <img id="img1" src="http://1.bp.blogspot.com/-4F94VfrqQyA/UGBa-MuR89I/AAAAAAAADRg/pA_T68Ua-X8/s1600/Watts2.gif" alt="Alan Watts"/>
+    <img id="gif1" src="https://static.tumblr.com/66c651a37b72a945f74cb7fe40553082/nbtergs/4x2pmcpmx/tumblr_static_tumblr_static_bv74lbzzveo0okkk0wgkwkss8_focused_v3.gif" alt="Alan Watts"/>
     <ul>
-    <li>Born in Chislehurst, England</li>
-    <li>New York</li>
-    <li>Evanston, Illinois</li>
-    <li>San Francisco, California</li>
-    <li>Druid Heights, California</li>
-    <li>Sausalito, California</li>
+      <p>A History of Residence:</p>
+      <li>Born in Chislehurst, England</li>
+      <li>New York</li>
+      <li>Evanston, Illinois</li>
+      <li>San Francisco, California</li>
+      <li>Druid Heights, California</li>
+      <li>Sausalito, California</li>
     </ul>
-    <blockquote>"This is the real secret of life — to be completely engaged with what you are doing in the here and now. And instead of calling it work, realize it is play."</blockquote>
-    <blockquote>"We do not 'come into' this world; we come out of it, as leaves from a tree. As the ocean 'waves', the universe 'peoples'."</blockquote>
-    <blockquote>"Every individual is a unique manifestation of the Whole, as every branch is a particular outreaching of the tree."</blockquote>
+    <div id="quotes">
+      <blockquote>"This is the real secret of life — to be completely engaged with what you are doing in the here and now. And instead of calling it work, realize it is play."</blockquote>
+      <blockquote>"We do not 'come into' this world; we come out of it, as leaves from a tree. As the ocean 'waves', the universe 'peoples'."</blockquote>
+      <blockquote>"Every individual is a unique manifestation of the Whole, as every branch is a particular outreaching of the tree."</blockquote>
+    </div>
   </body>
 </html>
