--- a/code/brndn/HTML_CSS_Labs/Lab1_Bio/bio.html
+++ b/code/brndn/HTML_CSS_Labs/Lab1_Bio/bio.html
@@ -4,6 +4,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="bio.css"/>
     <title>Alan Watts Bio</title>
   </head>
